# snack

./: .gitignore  AGENTS.md  Cargo.toml  README.md  build.rs  deny.toml
.github/: dependabot.yml
.github/cmake/: windows-arm64.cmake
.github/workflows/: ci.yml
assets/icons/: snack.icns
assets/icons/linux/: snack.desktop
assets/icons/macos/: Assets.car  Info.plist.ext  snack.icns
assets/icons/snack.icon/: icon.json
assets/macos/: Info.plist
scripts/: agent-ui-check.sh  agentctl.sh  generate-icons.sh  macos-app.sh
src/: app.rs  auth.rs  cache.rs  config.rs  error.rs  macos.rs  main.rs  state.rs  windows.rs
src/app/: agent.rs  palette.rs  subscription.rs  tests.rs  ui_visual.rs  update.rs  view.rs
src/slack/: api.rs  client.rs  edge.rs  events.rs  huddle_api.rs  mod.rs  models.rs  realtime.rs  transport.rs  xparams.rs
src/ui/: activity.rs  blocks.rs  channel.rs  composer.rs  dms.rs  icons.rs  message.rs  mod.rs  motion.rs  palette.rs  profile.rs  rail.rs  search.rs  selectable.rs  settings.rs  sidebar.rs  theme.rs  thread.rs
