[package]
name = "snack"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
iced = { git = "https://github.com/iced-rs/iced", rev = "7c6ce8789c4671db81a3920d06e87ab6d8edef1d", features = ["tokio", "image", "svg", "advanced", "lazy"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.40", features = ["bundled"] }
thiserror = "2"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
    "fs",
    "process",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["serde", "v4"] }

wreq = { version = "6.0.0-rc.29", features = [
    "json",
    "form",
    "cookies",
    "gzip",
    "brotli",
    "deflate",
    "zstd",
    "stream",
    "ws",
] }
wreq-util = "3.0.0-rc.13"
futures = "0.3"

directories = "6"

wry = "0.55"
tao = "0.35"

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["sync-secret-service"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }
