[package]
name = "snack"
version = "0.1.0"
edition = "2024"
description = "A stupid fast and lightweight Slack client"
license-file = "LICENSE.txt"

[package.metadata.bundle]
name = "Snack"
identifier = "com.echonet.snack"
icon = ["assets/icons/snack.icns", "assets/icons/snack.ico", "assets/icons/snack.svg"]
short_description = "A stupid fast and lightweight Slack client"
long_description = "A stupid fast and lightweight Slack client built with Rust and Iced."
category = "public.app-category.social-networking"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[build-dependencies]
winresource = "0.1"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
emojis = "0.9"
gif = "0.14.2"
unicode-segmentation = "1"
iced = { git = "https://github.com/iced-rs/iced", rev = "56b706fcd35aa881baede77a696bbb842773fdc6", features = ["tokio", "image", "svg", "advanced", "lazy"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.40", features = ["bundled"] }
thiserror = "2"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
    "fs",
    "process",
    "net",
    "io-util",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["serde", "v4"] }
png = "0.17"

wreq = { version = "6.0.0-rc.29", features = [
    "json",
    "form",
    "cookies",
    "gzip",
    "brotli",
    "deflate",
    "zstd",
    "stream",
    "ws",
] }
wreq-util = "3.0.0-rc.13"
futures = "0.3"

directories = "6"
rfd = "0.16"

wry = "0.55"
tao = "0.35"

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["sync-secret-service"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }

[dev-dependencies]
iced_test = { git = "https://github.com/iced-rs/iced", rev = "56b706fcd35aa881baede77a696bbb842773fdc6" }
